# check-redirects.com

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README.txt  cookiecutter-config-file.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: app.py  extensions.py
app/blueprints/admin/: forms.py  models.py  views.py
app/blueprints/contact/: __init__.py  tasks.py  views.py
app/blueprints/page/: __init__.py  forms.py  views.py
app/blueprints/redirect/: redirect.py
app/blueprints/user/: forms.py  models.py  tasks.py  (+1 more)
app/migrations/: env.py
app/tests/: conftest.py
app/translations/: messages.pot
assets/: package.json
assets/app/: app.js
assets/static/: 502.html
backend/app/: pyproject.toml
backup/: .env.example  .gitignore  README.md  requirements.txt
backup/app/: app.py
backup/assets/: package.json
backup/cli/: cmd_add.py  cmd_cov.py  cmd_db.py  cmd_flake8.py  cmd_secret.py  cmd_test.py
backup/lib/: flask_mailplus.py  redirect.py  safe_next_url.py  util_datetime.py  util_json.py  util_sqlalchemy.py  util_wtforms.py
cli/: __init__.py  cmd_add.py  cmd_babel.py  cmd_cov.py  cmd_db.py  cmd_test.py
config/: settings.py
frontend/: .env.example  .eslintrc.js  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  api.ts  main.ts  registerServiceWorker.ts  router.ts
lib/: __init__.py  flask_mailplus.py  locale.py  redirect.py  template_processors.py  tests.py  util_logger.py  util_sqlalchemy.py  util_wtforms.py
(+80 files in other folders)
