[tool.poetry]
name = "check-redirects"
version = "0.1.0"
description = ""
authors = ["danielmichaels <dans.address@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
httpx = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
